# vulkan_engine

./: .gitignore  .gitmodules  README.md  README_doc.md  notes  vulkan_application
android/: LICENSE  README.md  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/thierry/android_surface_view_with_vulkan/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html
android/app/src/main/assets/www/: index.html
android/app/src/main/c/jni_vulkan/: AndroidGraphicsApplication.c  AndroidGraphicsApplication.h  CMakeLists.txt  VulkanAppBridge.c  VulkanAppBridge.h
android/app/src/main/c/jni_vulkan/utils/: util.hpp  util_init.hpp  volk_setup.h
android/app/src/main/c/jni_vulkan/vulkan_application/: CMakeLists.txt  DSL_vulkan.c  DSL_vulkan.h  DSL_vulkan_header.h  DSL_vulkan_impl.h  Program.c  Program.h  VulkanDSL.c  VulkanDSL.h  assets  config.c  config.h  cube.c  cube.h  cube2.h  cube_android.c  cube_ios.h  textures
android/app/src/main/c/jni_vulkan/vulkan_application/assets_management/: AssetsFetcher.c  AssetsFetcher.h  assets_fetcher.c  assets_fetcher.h
android/app/src/main/c/jni_vulkan/vulkan_application/legacy/: GraphicsApplication.cpp  GraphicsApplication.hpp
android/app/src/main/c/jni_vulkan/vulkan_application/shaders/textPanel/: textPanel.frag  textPanel.vert
android/app/src/main/c/jni_vulkan/vulkan_application/utils/: gettime.h  linmath.h  tinyobj_loader_c.h
android/app/src/main/cpp/jni_vulkan/: AndroidGraphicsApplication.c  AndroidGraphicsApplication.cpp  AndroidGraphicsApplication.h  AndroidGraphicsApplication.hpp  CMakeLists.txt  GraphicsApplication.cpp  GraphicsApplication.hpp  VulkanAppBridge.c  VulkanAppBridge.cpp
android/app/src/main/cpp/jni_vulkan/utils/: util.hpp  volk_setup.hpp
android/app/src/main/cpp/jni_vulkan/vulkan_application/: CMakeLists.txt  cube.c  cube.cpp  cube.h  cube2.h
android/app/src/main/cpp/jni_vulkan/vulkan_application/cube/: CMakeLists.txt
android/app/src/main/cpp/jni_vulkan/vulkan_application/textures/: home8.ppm
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
doc/profiling/experience1/: README
ios/: README.md
ios/Demos/Cube/Cube.xcodeproj/: project.pbxproj
ios/Demos/Cube/Cube.xcodeproj/xcshareddata/xcschemes/: Cube-iOS.xcscheme
ios/Demos/Cube/iOS/: AppMain.swift  DemoViewController.m  FilterTheWorld-Bridging-Header.h  main.m
ios/Demos/Cube/iOS/Resources/: Main.storyboard
ios/FilterTheWorld/: macOS-Info.plist
ios/FilterTheWorld/FilterTheWorld/: AppMain.swift  Info.plist
ios/FilterTheWorld/FilterTheWorld.xcodeproj/: project.pbxproj
ios/FilterTheWorld/FilterTheWorld.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/FilterTheWorld/FilterTheWorld.xcodeproj/xcshareddata/xcschemes/: FilterTheWorld macOS.xcscheme  FilterTheWorld.xcscheme
ios/FilterTheWorld/FilterTheWorld/Camera/: CameraError.swift  CameraManager.swift  FrameManager.swift
ios/FilterTheWorld/FilterTheWorld/Components/: LayerView.swift  VulkanViewController.swift
ios/FilterTheWorld/FilterTheWorld/ViewModels/: ContentViewModel.swift
ios/FilterTheWorld/FilterTheWorld/Views/: ContentView.swift  ErrorView.swift  FrameView.swift  VulkanView.swift
ios/FilterTheWorld/FilterTheWorld/bridge/: DemoViewController.h  DemoViewController.m  FilterTheWorld-Bridging-Header.h
ios/FilterTheWorld/MoltenVK.xcframework/: Info.plist
ios/FilterTheWorld/vulkan.framework/Versions/A/: vulkan
ios/FilterTheWorld/vulkan.framework/Versions/A/_CodeSignature/: CodeResources
ios/iOSVulkanExample.xcworkspace/: contents.xcworkspacedata
ios/iOSVulkanExample/iOSVulkanExample/: ContentView.swift  iOSVulkanExampleApp.swift
ios/iOSVulkanExample/iOSVulkanExample.xcodeproj/: project.pbxproj
ios/iOSVulkanExample/iOSVulkanExample.xcodeproj/xcshareddata/xcschemes/: iOSVulkanExample.xcscheme
ios/macOS/: DemoViewController.m
(+7 files in other folders)
